--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-validator": "^6.14.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.6"
   }
 }
